Force nvim as editor

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,6 +1,6 @@
 [core]
 	excludesfile = ~/.gitignore
-	editor = vim
+	editor = nvim
 	quotepath = false
 [user]
 	name = Dan Cohn
@@ -16,7 +16,7 @@
 	df = diff -w
 	bl = blame -w
 	lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
-	edit-unmerged = "!f() { git ls-files --unmerged | cut -f2 | sort -u; }; vim `f`"
+	edit-unmerged = "!f() { git ls-files --unmerged | cut -f2 | sort -u; }; nvim `f`"
 	add-unmerged = "!f() { git ls-files --unmerged | cut -f2 | sort -u; }; git add `f`"
 	vimdiff = mergetool -t vimdiff
 	m = branch -r --merged
